--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Duc's Frontend Masters React</title>
 </head>
 <body>
-	<div id="app">React has not yet rendered</div>
+	<div id="app"><%= body %></div>
 	<script src="/public/bundle.js"></script>
 </body>
 </html>
