--- a/v2/index.html
+++ b/v2/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Frontend Masters React</title>
 </head>
 <body>
-  
+  <div id="app">React has not yet rendered</div>
+  <script src="node_modules/react/dist/react.js"></script>
+  <script src="node_modules/react-dom/dist/react-dom.js"></script>
+  <script>
+    var MyFirstComponent = React.createClass({
+      render: function () {
+        return (
+          React.DOM.div(null,
+            React.DOM.h1(null, 'This is my first component!')
+          )
+        )
+      }
+    })
+  </script>
 </body>
 </html>
