adding different files

--- a/v2/index.html
+++ b/v2/index.html
@@ -18,6 +18,8 @@
         )
       }
     })
+
+    ReactDOM.render(React.createElement(MyFirstComponent), document.getElementById('app'))
   </script>
 </body>
 </html>
