--- a/v2/index.html
+++ b/v2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Frontend Masters React</title>
+  <title>Duc's Frontend Masters React</title>
 </head>
 <body>
   <div id="app">React has not yet rendered</div>
